force-app/main/default/objects/AM_Festival__c/AM_Festival__c.object-meta.xml
<CustomObject>
    <label>AM Festival</label>
    <nameField>
        <displayFormat>FEST-{0000}</displayFormat>
        <label>AM Festival ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Festivals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>