force-app/main/default/objects/AM_Festival__c/fields/AM_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Date__c</fullName>
    <label>AM Date</label>
    <type>Date</type>
</CustomField>