force-app/main/default/objects/AM_Festival__c/fields/AM_Festival_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Festival_Name__c</fullName>
    <label>AM Festival Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewYear</fullName>
            </value>
            <value>
                <fullName>Pongal</fullName>
            </value>
            <value>
                <fullName>RepublicDay</fullName>
            </value>
            <value>
                <fullName>MahaShivaratri</fullName>
            </value>
            <value>
                <fullName>Holi</fullName>
            </value>
            <value>
                <fullName>Ugadi</fullName>
            </value>
            <value>
                <fullName>ShriRamaNavami</fullName>
            </value>
            <value>
                <fullName>GoodFriday</fullName>
            </value>
            <value>
                <fullName>RamzanId/Eid-ul-Fitar</fullName>
            </value>
            <value>
                <fullName>IndependenceDay</fullName>
            </value>
            <value>
                <fullName>GaneshChaturthi</fullName>
            </value>
            <value>
                <fullName>RakshaBandhan</fullName>
            </value>
            <value>
                <fullName>Janmashtami</fullName>
            </value>
            <value>
                <fullName>Dussehra</fullName>
            </value>
            <value>
                <fullName>Diwali</fullName>
            </value>
            <value>
                <fullName>Christmas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>