force-app/main/default/objects/AM_Festival__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AM_Festival_Name__c</columns>
    <columns>AM_Years__c</columns>
    <columns>AM_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>